# Normal-NeRF

./: .gitignore  .pre-commit-config.yaml  README.md  preprocess_glossy.py  preprocess_shiny.py  pyproject.toml
griddecay/: grid_offset.cpp  setup.py
griddecay/griddecay/: __init__.py
normalnerf/: config.py  field.py  field_components.py  losses.py  model.py  renderers.py  scheduler.py  shaders.py  shinyblender_dataparser.py  shinyblender_dataset.py  utils.py
